--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "lerna": "2.0.0-beta.38",
     "lerna-changelog": "^0.2.3",
     "lint-staged": "^3.4.0",
+    "node-sass": "^4.5.2",
     "pre-commit": "^1.2.2",
     "prettier": "^0.21.0"
   },
@@ -34,9 +35,6 @@
       "git add",
       "eslint"
     ],
-    "scripts": {
-      "my-task": "run",
-    },
     "lint-staged": {
       "*": "my-task"
     }
